[LFC][IFC] Incorrect use of BreakWord with preferred width computation (it's a valid value for both WordBreak and OverflowWrap) https://bugs.webkit.org/show_bug.cgi?id=233258

Reviewed by Antti Koivisto.

This was caught by fast/text/word-break.html (note that this codepath is not yet enabled).

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::wordBreakBehavior const):



Canonical link: https://commits.webkit.org/244342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285933 268f45cc-cd09-0410-ab3c-d52691b4dbfc